--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Redirect Test</title>
+	<title>UP PUGAD Sayk Application</title>
+
+	<!-- Bootstrap CSS CDN -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <script>
-function submit() {
-  var name = document.getElementById("name").value
-  console.log(name)
-  if(name == "Dodan"){
-    	location.href = "hedgehog.html";}
-	else if(name == "Ryan"){
-	location.href = "cow.html";
-	}else{
-	location.href = "goat.html";
-	}}
+function start(){location.href = "form.html";}
 </script>
-<form id = "inputs">
-<label>First name:</label><br>
-<input type="text" name="fname" id=name><br>
-</form>
-<button type="button" onclick="submit()">Submit</button>
 
 
+<div class = "col" style = "height:33%"></div>
+<div class = "row">
+	<div class = "col"></div>
+	<div class = "col text-center">
+		<h1 class = "title">UP PUGAD Sayk</h1>
+		<h2 class = "title" style = "font-size: 40px;">Applications!</h2>
+		<button type="button" onclick="start()" class="button">Start!</button>
+	</div>
+	<div class = "col"></div>
+</div>
 
 </body>
 </html>
