--- a/form.html
+++ b/form.html
@@ -84,7 +84,7 @@ async function submit() {
 			<label>Last Name:</label><br>
 			<input type="text" name="fname" id="lname" class = "rounded"><br>
 			<label for="birthday">Birthday:</label><br>
-			<input type="date" id="birthday" name="birthday" class = "rounded">
+			<input type="date" id="birthday" name="birthday" class = "rounded"><br>
 			<label>Favorite Color:</label><br>
 			<input type="text" name="fname" id="color" class = "rounded"><br>
 			</form>
