--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 <script>
 function start(){location.href = "form.html";}
 </script>
+<!-- 
+Base code created by Ethan Paguila
+version 1 - September 9, 2020
+ - Created index.html, form.html, and the sample results which are the 4 hogwarts houses. 
 
+I am terrible at web development and writing clean code. I am really sorry for the mess.
+If you have questions email me at rtpaguila@up.edu.ph
+ -->
 
 <div class = "col" style = "height:33%"></div>
 <div class = "row">
