--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@ async function submit() {
   // If you do decide to change this, change fname to the ID of the input tag that you want
   // and everything should work na. Don't forget to change the values sa if-else tags sa baba
   var name = document.getElementById("fname").value
-
+  var lname = document.getElementById("lname").value
 
   var userform = document.getElementById("inputs");
   var subbutton = document.getElementById("submitButton");
