--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@ async function submit() {
   // a webpage that tells the applicant to try again. It might make them go somewhere
   // where they shouldn't kasi. In this case for the base code I wrote Jordanne instead of
   // Dodan. It might send me to gryffindor but I should be in ravenclaw.
-  	if(name.toLowerCase() == "dodan"){
+  	if(name.toLowerCase() == "dodan" && lname.toLowerCase() == "zamora"){
     	location.href = "ravenclaw.html";}
 	else if(name.toLowerCase() == "ryan"){
 	location.href = "hufflepuff.html";
