--- a/form.html
+++ b/form.html
@@ -102,7 +102,7 @@ async function submit() {
 		<div class = "col text-center" id = "middle">
 			<form id = "inputs">
 			<h2 class = "title">Who u?</h1>
-			<label>First Name:</label><br>
+			<label>Nickname:</label><br>
 			<input type="text" name="fname" id="fname" class = "rounded"><br>
 			<label>Last Name:</label><br>
 			<input type="text" name="fname" id="lname" class = "rounded"><br>
