--- a/desertowl.html
+++ b/desertowl.html
@@ -15,7 +15,7 @@
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<h1 class = "title">You are a Gryffindor!</h1>
+		<h1 class = "title">You are a Desert Owl!</h1>
 		<img src="gryffindor.png">
 	</div>
 	<div class = "col"></div>
