--- a/form.html
+++ b/form.html
@@ -77,7 +77,7 @@ async function submit() {
   // where they shouldn't kasi. In this case for the base code I wrote Jordanne instead of
   // Dodan. It might send me to gryffindor but I should be in ravenclaw.
   	if(name.toLowerCase() == "dodan" && lname.toLowerCase() == "zamora"){
-    	location.href = "ravenclaw.html";}
+    	location.href = "desertowl.html";}
 	else if(name.toLowerCase() == "ryan"){
 	location.href = "hufflepuff.html";
 	}else if(name.toLowerCase() == "ronel"){
