--- a/chameleon.html
+++ b/chameleon.html
@@ -15,7 +15,7 @@
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<h1 class = "title">You are a Hufflepuff!</h1>
+		<h1 class = "title">You are a Chameleon!</h1>
 		<img src="hufflepuff.png">
 	</div>
 	<div class = "col"></div>
