Update and rename ravenclaw.html to wolf.html

--- a/wolf.html
+++ b/wolf.html
@@ -15,7 +15,7 @@
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<h1 class = "title">You are a Ravenclaw!</h1>
+		<h1 class = "title">You are a Wolf!</h1>
 		<img src="ravenclaw.png">
 	</div>
 	<div class = "col"></div>
