Update and rename slytherin.html to camel.html

--- a/camel.html
+++ b/camel.html
@@ -15,7 +15,7 @@
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<h1 class = "title">You are a Slytherin!</h1>
+		<h1 class = "title">You are a Camel!</h1>
 		<img src="slytherin.png">
 	</div>
 	<div class = "col"></div>
