--- a/form.html
+++ b/form.html
@@ -76,13 +76,17 @@ async function submit() {
   // a webpage that tells the applicant to try again. It might make them go somewhere
   // where they shouldn't kasi. In this case for the base code I wrote Jordanne instead of
   // Dodan. It might send me to gryffindor but I should be in ravenclaw.
-  	if(name.toLowerCase() == "dodan" && lname.toLowerCase() == "zamora"){
+  	if(name.toLowerCase() == "blossom" && lname.toLowerCase() == "mapalad"){
     	location.href = "desertowl.html";}
-	else if(name.toLowerCase() == "ryan"){
+	else if(name.toLowerCase() == "seph" && lname.toLowerCase() == "tinio"){
 	location.href = "hufflepuff.html";
-	}else if(name.toLowerCase() == "ronel"){
+	}else if(name.toLowerCase() == "yana" && lname.toLowerCase() == "antonio"){
 	location.href = "slytherin.html";
-	}else{
+	}else if(name.toLowerCase() == "kaye" && lname.toLowerCase() == "atienza"){
+	location.href = "gryffindor.html"
+	}else if(name.toLowerCase() == "dc" && lname.toLowerCase() == "de castro"){
+	location.href = "gryffindor.html"	
+	}else if(name.toLowerCase() == "drei" && lname.toLowerCase() == "de guzman"){
 	location.href = "gryffindor.html"
 	}
 				}
