--- a/form.html
+++ b/form.html
@@ -83,11 +83,11 @@ async function submit() {
 	}else if(name.toLowerCase() == "yana" && lname.toLowerCase() == "antonio"){
 	location.href = "slytherin.html";
 	}else if(name.toLowerCase() == "kaye" && lname.toLowerCase() == "atienza"){
-	location.href = "gryffindor.html"
+	location.href = "gryffindor.html";
 	}else if(name.toLowerCase() == "dc" && lname.toLowerCase() == "de castro"){
-	location.href = "gryffindor.html"	
+	location.href = "gryffindor.html";	
 	}else if(name.toLowerCase() == "drei" && lname.toLowerCase() == "de guzman"){
-	location.href = "gryffindor.html"
+	location.href = "gryffindor.html";
 	}
 				}
 </script>
