--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UP PUGAD Sayk Application</title>
+	<title>UP PUGAD Sayk AKWE 2020</title>
 
 	<!-- Bootstrap CSS CDN -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -27,8 +27,9 @@ If you have questions email me at rtpaguila@up.edu.ph
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<h1 class = "title">UP PUGAD Sayk</h1>
-		<h2 class = "title" style = "font-size: 40px;">Applications!</h2>
+		<h1 class = "title">AKWE 2020: Sand? Dune.</h1>
+		<h2 class = "title" style = "font-size: 40px;">Are you ready to book your ticket?</h2>
+		<img src="Akwe Pub.gif">
 		<button type="button" onclick="start()" class="button">Start!</button>
 	</div>
 	<div class = "col"></div>
