--- a/form.html
+++ b/form.html
@@ -77,17 +77,17 @@ async function submit() {
   // where they shouldn't kasi. In this case for the base code I wrote Jordanne instead of
   // Dodan. It might send me to gryffindor but I should be in ravenclaw.
   	if(name.toLowerCase() == "blossom" && lname.toLowerCase() == "mapalad"){
-    	location.href = "desertowl.html";}
+    	location.href = "chameleon.html";}
 	else if(name.toLowerCase() == "seph" && lname.toLowerCase() == "tinio"){
-	location.href = "hufflepuff.html";
-	}else if(name.toLowerCase() == "yana" && lname.toLowerCase() == "antonio"){
-	location.href = "slytherin.html";
-	}else if(name.toLowerCase() == "kaye" && lname.toLowerCase() == "atienza"){
-	location.href = "gryffindor.html";
-	}else if(name.toLowerCase() == "dc" && lname.toLowerCase() == "de castro"){
-	location.href = "gryffindor.html";	
-	}else if(name.toLowerCase() == "drei" && lname.toLowerCase() == "de guzman"){
-	location.href = "gryffindor.html";
+	location.href = "chameleon.html";
+	}else if(name.toLowerCase() == "rafa" && lname.toLowerCase() == "mendoza"){
+	location.href = "chameleon.html";
+	}else if(name.toLowerCase() == "camilla" && lname.toLowerCase() == "hatfield"){
+	location.href = "chameleon.html";
+	}else if(name.toLowerCase() == "erich" && lname.toLowerCase() == "sasazawa"){
+	location.href = "chamelon.html";	
+	}else if(name.toLowerCase() == "frances" && lname.toLowerCase() == "chan"){
+	location.href = "chameleon.html"
 	}
 				}
 </script>
