--- a/form.html
+++ b/form.html
@@ -78,16 +78,80 @@ async function submit() {
   // Dodan. It might send me to gryffindor but I should be in ravenclaw.
   	if(name.toLowerCase() == "blossom" && lname.toLowerCase() == "mapalad"){
     	location.href = "chameleon.html";}
-	else if(name.toLowerCase() == "seph" && lname.toLowerCase() == "tinio"){
+	else if(lname.toLowerCase() == "tinio"){
 	location.href = "chameleon.html";
-	}else if(name.toLowerCase() == "rafa" && lname.toLowerCase() == "mendoza"){
+	}else if(lname.toLowerCase() == "mendoza"){
 	location.href = "chameleon.html";
-	}else if(name.toLowerCase() == "camilla" && lname.toLowerCase() == "hatfield"){
+	}else if(lname.toLowerCase() == "hatfield"){
 	location.href = "chameleon.html";
-	}else if(name.toLowerCase() == "erich" && lname.toLowerCase() == "sasazawa"){
+	}else if(lname.toLowerCase() == "sasazawa"){
 	location.href = "chamelon.html";	
-	}else if(name.toLowerCase() == "frances" && lname.toLowerCase() == "chan"){
-	location.href = "chameleon.html"
+	}else if(lname.toLowerCase() == "chan"){
+	location.href = "chameleon.html";
+	}else if(lname.toLowerCase() == "sacote"){
+	location.href = "chamelon.html";
+	}else if(lname.toLowerCase() == "de guzman"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "rondain"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "traballo"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "perez"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "ibañez"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "lardizabal"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "angeles"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "quemuel"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "cauilan"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "batalla"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "briñas"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "manalili"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "marquez"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "almario"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "francisco"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "paragas"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "tormis"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "escaño"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "gappi"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "de castro"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "lumague"){
+	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "balendres"){
+	location.href = "desertfox.html";	
+	}else if(lname.toLowerCase() == "aggabao"){
+	location.href = "desertfox.html";	
+	}else if(lname.toLowerCase() == "santos"){
+	location.href = "desertfox.html";	
+	}else if(lname.toLowerCase() == "antonio"){
+	location.href = "desertfox.html";	
+	}else if(lname.toLowerCase() == "saldaña"){
+	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "quintos"){
+	location.href = "desertfox.html";	
+	}else if(lname.toLowerCase() == "gomez"){
+	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "reyes"){
+	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "francisco"){
+	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "sancio"){
+	location.href = "desertfox.html"	
 	}
 				}
 </script>
