--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ If you have questions email me at rtpaguila@up.edu.ph
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<img src="indexgraphic.png" style="width:900px;">
-		<h2 class = "title" style = "font-size: 20px;">Are you ready to book your ticket?</h2>
+		<img src="graphicindex.png" style="width:900px;">
 		<button type="button" onclick="start()" class="button">Start!</button>
 	</div>
 	<div class = "col"></div>
