--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ If you have questions email me at rtpaguila@up.edu.ph
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
-		<img src="graphicindex.png" style="width:900px;">
+		<img src="graphicindex2.png" style="width:900px;">
 		<button type="button" onclick="start()" class="button">Start!</button>
 	</div>
 	<div class = "col"></div>
