--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ If you have questions email me at rtpaguila@up.edu.ph
 
 <div class = "col" style = "height:20%"></div>
 <div class = "row">
+	<div class = "col"></div>
 	<div class = "col text-center">
 		<img src="graphicindex2.png" style="width:750px;">
 		<button type="button" onclick="start()" class="button">Start!</button>
