--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UP PUGAD Sayk Application</title>
+	<title>UP PUGAD Sayk AKWE 2020</title>
 
 	<!-- Bootstrap CSS CDN -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -164,12 +164,12 @@ async function submit() {
 		and change the ID in the input tag to whatever you want. Follow instructions above!
 		If you're having trouble with stuff my contact info is in index.html hehe
 		 -->
-	<div class = "col" style = "height:33%"></div>
+	<div class = "col" style = "height:5%"></div>
 	<div class = "row">
 		<div class = "col"></div>
 		<div class = "col text-center" id = "middle">
 			<form id = "inputs">
-			<h2 class = "title">Who u?</h1>
+			<img src="form.png" style="width:750px;">
 			<label>Nickname:</label><br>
 			<input type="text" name="fname" id="fname" class = "rounded"><br>
 			<label>Last Name:</label><br>
