--- a/form.html
+++ b/form.html
@@ -169,7 +169,7 @@ async function submit() {
 		<div class = "col"></div>
 		<div class = "col text-center" id = "middle">
 			<form id = "inputs">
-			<img src="form1.png" style="width:750px;">
+			<img src="form.png" style="width:750px;">
 			<label>Nickname:</label><br>
 			<input type="text" name="fname" id="fname" class = "rounded"><br>
 			<label>Last Name:</label><br>
