--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ If you have questions email me at rtpaguila@up.edu.ph
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
+		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<img src="graphicindex2.png" style="width:750px;">
 		<button type="button" onclick="start()" class="button">Start!</button>
 	</div>
