--- a/camel.html
+++ b/camel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UP PUGAD Sayk Application</title>
+	<title>UP PUGAD Sayk AKWE 2020</title>
 
 	<!-- Bootstrap CSS CDN -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -11,12 +11,17 @@
 </head>
 <body>
 
-<div class = "col" style = "height:33%"></div>
+<script>
+function continue(){location.href = "ticketcamel.html";}
+</script>
+
+<div class = "col" style = "height:5%"></div>
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
 		<h1 class = "title">You are a Camel!</h1>
-		<img src="slytherin.png">
+		<img src="camel.png">
+		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
 </div>
