--- a/chameleon.html
+++ b/chameleon.html
@@ -12,7 +12,7 @@
 <body>
 
 <script>
-function continue(){location.href = "ticketcamel.html";}
+function continue(){location.href = "ticketchameleon.html";}
 </script>
 	
 <div class = "col" style = "height:5%"></div>
