--- a/chameleon.html
+++ b/chameleon.html
@@ -19,8 +19,9 @@ function continue(){location.href = "ticketchameleon.html";}
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
+		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">You are a Chameleon!</h1>
-		<img src="chameleon.png">
+		<img src="chameleon.png" style="width:300px;">
 		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
