--- a/desertfox.html
+++ b/desertfox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UP PUGAD Sayk Application</title>
+	<title>UP PUGAD Sayk AKWE 2020</title>
 
 	<!-- Bootstrap CSS CDN -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -10,13 +10,19 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	
+<script>
+function continue(){location.href = "ticketdesertfox.html";}
+</script>
 
 <div class = "col" style = "height:33%"></div>
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
+		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">You are a Desert Fox!</h1>
-		<img src="gryffindor.png">
+		<img src="desertfox.png" style="width:300px;">
+		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
 </div>
