--- a/camel.html
+++ b/camel.html
@@ -19,8 +19,9 @@ function continue(){location.href = "ticketcamel.html";}
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
+		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">You are a Camel!</h1>
-		<img src="camel.png">
+		<img src="camel.png" style="width:300px;>
 		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
