--- a/desertfox.html
+++ b/desertfox.html
@@ -15,13 +15,13 @@
 function continue(){location.href = "ticketdesertfox.html";}
 </script>
 
-<div class = "col" style = "height:33%"></div>
+<div class = "col" style = "height:5%"></div>
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">You are a Desert Fox!</h1>
-		<img src="desertfox.png" style="width:300px;">
+		<img src="desertfox.png" style="width:300px; padding-bottom: 20px;"">
 		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
