--- a/wolf.html
+++ b/wolf.html
@@ -11,12 +11,18 @@
 </head>
 <body>
 
-<div class = "col" style = "height:33%"></div>
+<script>
+function continue(){location.href = "ticketwolf.html";}
+</script>
+
+<div class = "col" style = "height:5%"></div>
 <div class = "row">
 	<div class = "col"></div>
 	<div class = "col text-center">
+		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">You are a Wolf!</h1>
-		<img src="ravenclaw.png">
+		<img src="wolf.png" style="width:300px; padding-bottom: 20px;">
+		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
 </div>
