--- a/camel.html
+++ b/camel.html
@@ -21,7 +21,7 @@ function continue(){location.href = "ticketcamel.html";}
 	<div class = "col text-center">
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">You are a Camel!</h1>
-		<img src="camel.png" style="width:300px;>
+		<img src="camel.png" style="width:300px; padding-bottom: 20px;">
 		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
