--- a/chameleon.html
+++ b/chameleon.html
@@ -20,7 +20,7 @@ function continue(){location.href = "ticketchameleon.html";}
 	<div class = "col"></div>
 	<div class = "col text-center">
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
-		<h1 class = "title">You are a Chameleon!</h1>
+		<h1 class = "title">Welcome to Team Chameleon!</h1>
 		<img src="chameleon.png" style="width:300px; padding-bottom: 20px;">
 		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
