--- a/wolf.html
+++ b/wolf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UP PUGAD Sayk Application</title>
+	<title>UP PUGAD Sayk AKWE 2020</title>
 
 	<!-- Bootstrap CSS CDN -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -20,7 +20,7 @@ function continue(){location.href = "ticketwolf.html";}
 	<div class = "col"></div>
 	<div class = "col text-center">
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
-		<h1 class = "title">You are a Wolf!</h1>
+		<h1 class = "title">Welcome to Team Wolf!</h1>
 		<img src="wolf.png" style="width:300px; padding-bottom: 20px;">
 		<button type="button" onclick="continue()" class="button">Continue</button>
 	</div>
