--- a/wolf.html
+++ b/wolf.html
@@ -12,7 +12,7 @@
 <body>
 
 <script>
-function continue(){location.href = "ticketwolf.html";}
+function cont(){location.href = "ticketwolf.html";}
 </script>
 
 <div class = "col" style = "height:5%"></div>
@@ -22,7 +22,7 @@ function continue(){location.href = "ticketwolf.html";}
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">Welcome to Team Wolf!</h1>
 		<img src="wolf.png" style="width:300px; padding-bottom: 20px;">
-		<button type="button" onclick="continue()" class="button">Continue</button>
+		<button type="button" onclick="cont()" class="button">Continue</button>
 	</div>
 	<div class = "col"></div>
 </div>
