--- a/camel.html
+++ b/camel.html
@@ -12,7 +12,7 @@
 <body>
 
 <script>
-function cont(){location.href = "ticketcamel.html";}
+function cont(){window.location.href = "ticketcamel.html";}
 </script>
 
 <div class = "col" style = "height:5%"></div>
