--- a/desertfox.html
+++ b/desertfox.html
@@ -12,7 +12,7 @@
 <body>
 	
 <script>
-function cont(){location.href = "ticketdesertfox.html";}
+function cont(){window.location.href = "ticketdesertfox.html";}
 </script>
 
 <div class = "col" style = "height:5%"></div>
