--- a/form.html
+++ b/form.html
@@ -113,7 +113,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "briñas"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "manalili"){
-	location.href = "wolf.html";
+	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "marquez"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "almario"){
@@ -123,19 +123,19 @@ async function submit() {
 	}else if(lname.toLowerCase() == "paragas"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "tormis"){
-	location.href = "wolf.html";
+	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "escaño"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "gappi"){
-	location.href = "wolf.html";
+	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "de castro"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "lumague"){
 	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "balendres"){
-	location.href = "desertfox.html";	
+	location.href = "camel.html";	
 	}else if(lname.toLowerCase() == "aggabao"){
-	location.href = "desertfox.html";	
+	location.href = "camel.html";	
 	}else if(lname.toLowerCase() == "santos"){
 	location.href = "desertfox.html";	
 	}else if(lname.toLowerCase() == "antonio"){
@@ -145,13 +145,29 @@ async function submit() {
 	}else if(lname.toLowerCase() == "quintos"){
 	location.href = "desertfox.html";	
 	}else if(lname.toLowerCase() == "gomez"){
-	location.href = "desertfox.html";
+	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "reyes"){
 	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "francisco"){
 	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "sancio"){
-	location.href = "desertfox.html"	
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "baduria"){
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "cristobal"){
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "balmaceda"){
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "antero"){
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "suratos"){
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "tating"){
+	location.href = "desertfox.html"
+	}else if(lname.toLowerCase() == "diaz"){
+	location.href = "desertfox.html"
+	}else if(name.toLowerCase() == "riel" && lname.toLowerCase() == "guinto"){
+	location.href = "desertfox.html"
 	}
 				}
 </script>
