--- a/ticketdesertfox.html
+++ b/ticketdesertfox.html
@@ -18,7 +18,7 @@
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">Don't forget your ticket!</h1>
 		<img src="desertfox-ticket.png" style="width:750px;">
-		<button type="button" onclick="download()" class="button">Download Here!</button>
+		<h2 class = "title">See you there!</h2>
 	</div>
 	<div class = "col"></div>
 </div>
