--- a/form.html
+++ b/form.html
@@ -151,23 +151,23 @@ async function submit() {
 	}else if(lname.toLowerCase() == "francisco"){
 	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "sancio"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "baduria"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "cristobal"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "balmaceda"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "antero"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "suratos"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "tating"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "diaz"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(name.toLowerCase() == "riel" && lname.toLowerCase() == "guinto"){
-	location.href = "desertfox.html"
+	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "altarejos"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "dela cruz"){
