--- a/form.html
+++ b/form.html
@@ -171,7 +171,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "altarejos"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "dela cruz"){
-	location.href = "camel.html";
+	window.location.href = "camel.html";
 	}else if(name.toLowerCase() == "jv" && lname.toLowerCase() == "guinto"){
 	}
 				}
