--- a/form.html
+++ b/form.html
@@ -194,17 +194,17 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "mora"){
 	location.href = "wolf.html";
-	else if(lname.toLowerCase() == "villarin"){
+	}else if(lname.toLowerCase() == "villarin"){
 	location.href = "chameleon.html";
-	else if(lname.toLowerCase() == "anicete"){
+	}else if(lname.toLowerCase() == "anicete"){
 	location.href = "chameleon.html";
-	else if(lname.toLowerCase() == "aquino"){
+	}else if(lname.toLowerCase() == "aquino"){
 	location.href = "chameleon.html";
-	else if(lname.toLowerCase() == "sacobo"){
+	}else if(lname.toLowerCase() == "sacobo"){
 	location.href = "chameleon.html";
-	else if(lname.toLowerCase() == "labrador"){
+	}else if(lname.toLowerCase() == "labrador"){
 	location.href = "chameleon.html";
-	else if(lname.toLowerCase() == "belza"){
+	}else if(lname.toLowerCase() == "belza"){
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "quemuel"){
 	location.href = "desertowl.html";
