--- a/form.html
+++ b/form.html
@@ -168,6 +168,20 @@ async function submit() {
 	location.href = "desertfox.html";
 	}else if(name.toLowerCase() == "riel" && lname.toLowerCase() == "guinto"){
 	location.href = "desertfox.html";
+	}else if(name.toLowerCase() == "jv" && lname.toLowerCase() == "guinto"){
+	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "altarejos"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "dela cruz"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "halili"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "damullan"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "lezada"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "martinez"){
+	location.href = "camel.html";
 	}
 				}
 </script>
