--- a/form.html
+++ b/form.html
@@ -169,7 +169,7 @@ async function submit() {
 	}else if(name.toLowerCase() == "riel" && lname.toLowerCase() == "guinto"){
 	location.href = "desertfox.html";
 	}else if(name.toLowerCase() == "jv" && lname.toLowerCase() == "guinto"){
-	location.href = "desertfox.html";
+	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "altarejos"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "dela cruz"){
@@ -182,6 +182,26 @@ async function submit() {
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "martinez"){
 	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "zabala"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "delos reyes"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "ibias"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "cabrera"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "villarin"){
+	location.href = "chamelon.html";
+	}else if(lname.toLowerCase() == "anicete"){
+	location.href = "chamelon.html";
+	}else if(lname.toLowerCase() == "aquino"){
+	location.href = "chamelon.html";
+	}else if(lname.toLowerCase() == "sacobo"){
+	location.href = "chamelon.html";
+	}else if(lname.toLowerCase() == "labrado"){
+	location.href = "chamelon.html";
+	}else if(lname.toLowerCase() == "belza"){
+	location.href = "chamelon.html";
 	}
 				}
 </script>
