--- a/form.html
+++ b/form.html
@@ -89,7 +89,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "chan"){
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "sacote"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "de guzman"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "rondain"){
@@ -191,17 +191,27 @@ async function submit() {
 	}else if(lname.toLowerCase() == "cabrera"){
 	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "villarin"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "anicete"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "aquino"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "sacobo"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "labrado"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "belza"){
-	location.href = "chamelon.html";
+	location.href = "chameleon.html";
+	}else if(lname.toLowerCase() == "atienza"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "mora"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "asanza"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "sta. isabel"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "uriarte"){
+	location.href = "wolf.html";
 	}
 				}
 </script>
