--- a/form.html
+++ b/form.html
@@ -165,7 +165,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "tating"){
 	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "diaz"){
-	location.href = "desertfox.html";
+	location.href = "wolf.html";
 	}else if(name.toLowerCase() == "riel" && lname.toLowerCase() == "guinto"){
 	location.href = "desertfox.html";
 	}else if(name.toLowerCase() == "jv" && lname.toLowerCase() == "guinto"){
