--- a/form.html
+++ b/form.html
@@ -212,7 +212,8 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
 	location.href = "wolf.html";
-	}else "error.html";
+	}else "error"
+	location.href = "error.html";
 	}
 				}
 </script>
