--- a/error.html
+++ b/error.html
@@ -17,7 +17,7 @@
 	<div class = "col text-center">
 		<img src="UP PUGAD SAYK LOGO MASTER.png" style="width:100px;">
 		<h1 class = "title">ERROR!</h1>
-		<h2>There seems to be a problem processing your ticket. Please contact Mel Odtohan or Sophia Diamante if error persists.</h2>
+		<img src="error.png" style="width:750px;">
 	</div>
 	<div class = "col"></div>
 </div>
