--- a/form.html
+++ b/form.html
@@ -212,6 +212,8 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
 	location.href = "wolf.html";
+	}else if(lname is not in the list)
+	location.href = "error.html";
 	}
 				}
 </script>
