--- a/form.html
+++ b/form.html
@@ -212,8 +212,7 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
 	location.href = "wolf.html";
-	}else if(lname is not in the list)
-	location.href = "error.html";
+	}else ("error.html");
 	}
 				}
 </script>
