--- a/form.html
+++ b/form.html
@@ -212,7 +212,7 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
 	location.href = "wolf.html";
-	}else ("error.html");
+	}else { location.href = "error.html"; 
 	}
 				}
 </script>
