--- a/form.html
+++ b/form.html
@@ -212,6 +212,7 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
 	location.href = "wolf.html";
+	}else { location.href = "error.html";}
 	}
 				}
 </script>
