--- a/form.html
+++ b/form.html
@@ -85,7 +85,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "hatfield"){
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "sasazawa"){
-	location.href = "chamelon.html";	
+	location.href = "chameleon.html";	
 	}else if(lname.toLowerCase() == "chan"){
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "sacote"){
