--- a/form.html
+++ b/form.html
@@ -172,6 +172,8 @@ async function submit() {
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "altarejos"){
 	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "castro"){
+	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "dela cruz"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "halili"){
