--- a/form.html
+++ b/form.html
@@ -135,7 +135,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "balendres"){
 	location.href = "camel.html";	
 	}else if(lname.toLowerCase() == "aggabao"){
-	location.href = "camel.html";	
+	location.href = "desertfox.html";	
 	}else if(lname.toLowerCase() == "santos"){
 	location.href = "desertfox.html";	
 	}else if(lname.toLowerCase() == "antonio"){
