--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@ async function submit() {
     	location.href = "chameleon.html";}
 	else if(lname.toLowerCase() == "tinio"){
 	location.href = "chameleon.html";
-	}else if(lname.toLowerCase() == "mendoza"){
+	}else if(name.toLowerCase() == "rafa" && lname.toLowerCase() == "mendoza"){
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "hatfield"){
 	location.href = "chameleon.html";
@@ -97,6 +97,8 @@ async function submit() {
 	}else if(lname.toLowerCase() == "traballo"){
 	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "perez"){
+	location.href = "desertowl.html";
+	}else if(name.toLowerCase() == "jayne" && lname.toLowerCase() == "mendoza"){
 	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "ibañez"){
 	location.href = "desertowl.html";
@@ -173,7 +175,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "altarejos"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "castro"){
-	location.href = "camel.html";
+	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "dela cruz"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "halili"){
@@ -183,6 +185,10 @@ async function submit() {
 	}else if(lname.toLowerCase() == "lezada"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "martinez"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "ngo"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "ang"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "zabala"){
 	location.href = "desertowl.html";
