--- a/form.html
+++ b/form.html
@@ -220,6 +220,10 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
 	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "tubera"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "de la fuente"){
+	location.href = "wolf.html";
 	}else { location.href = "error.html"
 	}
 				}
